# os-sql

./: .gitignore  .omni-reference-sha  AGENTS.md  CLAUDE.md  README_ISSUE_3725.md  build.gradle  deploy.sh  flare.md  gradle.properties  integ.sh  join_benchmark.http  join_benchmark.md  join_benchmark.py  livy.http  phase1-failing-tests.txt  settings.gradle  sqlnode-baseline-2026-05-20.txt  sqlnode-redesign-inventory.md  sqlnode-test-results.md  test.http  test_timezone.ppl
.claude/: settings.local.json  user_rules
.gotrek01/: issue-5114-workflow.txt
.ralph/: EXEC_PROMPT_1.md  LOGS.md  LOGS_EXECUTE.md  LOGS_PLAN.md  PROMPT.md  STATUS.md  TASKS_1.md  TASKS_2.md  TASKS_3.md  TASKS_4.md  loop.sh
.sisyphus/: q39-optimization.md
api/: build.gradle
arion/: docker-compose.yml
async-query-core/: build.gradle
common/: build.gradle
core/: build.gradle
design/: design-doc.md  findings.md  phase1-design-doc.md  phase1-task-breakdown.md  phase1-team-plan.md  phase1-test-plan.md  phase2-design-doc.md  phase2-task-breakdown.md  phase2-team-plan.md  phase2-test-plan.md  task-breakdown.md  team-plan.md  test-plan.md
distributed-engine/: build.gradle
docker/: docker-compose.yml
docs/: README.md  category.json  distributed_engine.md  distributed_engine_design.md  distributed_engine_test_results.md  new_engine_design.md
dqe/: build.gradle
dqe/native/: Cargo.toml
dqe/native/src/: bench_agg.rs  bench_scale.rs  lib.rs
filesystem/: build.gradle
flink/: build.gradle
flint/: build.sbt
integ-test/: build.gradle
jdbc/: build.gradle
omni-engine/: build.gradle
(+3766 files in other folders)
