[package]
name = "dqe_datafusion"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
datafusion = { version = "44", default-features = false }
tokio = { version = "1", features = ["rt"] }
jni = "0.21"

[[bin]]
name = "bench_agg"
path = "src/bench_agg.rs"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
